# jllm

./: .gitignore  README.md  pyproject.toml
scripts/: convert_weights.py  download_model.py
src/: generation.py  kernels.py  linear.py  model.py  utils.py
src/jllama/: generation.py  gpt.py  kernels.py  linear.py  main.py  model.py  qwen_model.py  qwen_utils.py  tokenizer.py  train.py  utils.py
src/jllama.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/jllm/: gpt.py  linear.py  llama_model.py  main.py  qwen_model.py  qwen_utils.py  tokenizer.py  train.py  utils.py
src/jllm/llama/: llama3_model.py  main.py  utils.py
src/jllm/qwen/: flash.py  main.py  qwen3_model.py  utils.py
test/: test_gpt.py  test_kernels.py  test_llama_model.py  test_model.py
