[project]
name = "jllama"
version = "0.1.0"
# NOTE: split between CPU, GPU, TPU 
dependencies = [
    "jax",
    "flax",
    "optax",
    "numpy",
    "transformers",
    "tiktoken",
    "jaxtyping",
]

[project.optional-dependencies]
dev = [
    "pytorch", # required for compatibility test
    "pytest"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["jllama"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    ".venv"
]

line-length = 120 

[tool.ruff.lint.isort]
known-first-party = ["src"] 